Feat: Adicionando filtros nas listagens do swagger
