# storage/api-docs/api-docs.json
@@ -19,9 +19,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "example": [
-                                1
-                            ]
+                            "example": 1
                         }
                     },
                     {
@@ -31,9 +29,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "example": [
-                                100
-                            ]
+                            "example": 100
                         }
                     }
                 ],
@@ -206,9 +202,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "example": [
-                                1
-                            ]
+                            "example": 1
                         }
                     },
                     {
@@ -218,9 +212,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "example": [
-                                100
-                            ]
+                            "example": 100
                         }
                     }
                 ],
@@ -396,9 +388,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "example": [
-                                1
-                            ]
+                            "example": 1
                         }
                     },
                     {
@@ -408,9 +398,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "example": [
-                                100
-                            ]
+                            "example": 100
                         }
                     }
                 ],
@@ -625,9 +613,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "example": [
-                                1
-                            ]
+                            "example": 1
                         }
                     },
                     {
@@ -637,9 +623,41 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
+                            "example": 100
+                        }
+                    },
+                    {
+                        "name": "status[]",
+                        "in": "query",
+                        "description": "Informe os status que deseja que apareçam nos resultados",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
                             "example": [
-                                100
+                                "NEW"
                             ]
+                        }
+                    },
+                    {
+                        "name": "not_status[]",
+                        "in": "query",
+                        "description": "Informe os status que deseja que não apareçam nos resultados",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "example": [
+                                "CANCELED"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "create_date_sort",
+                        "in": "query",
+                        "description": "Informa a ordenação da listagem pela data da criação do pedido",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "DESC"
                         }
                     }
                 ],
